--- a/styles.css
+++ b/styles.css
@@ -15,6 +15,11 @@ a {
 	text-decoration: none;
 }
 
+#js--lifespan--text span {
+    margin-right: 1rem;
+    display: inline-block;
+}
+
 .lifespan--day {
 	display: inline-block;
 	height:  5px;
