--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,5 @@
 body {
+	color:       #333333;
 	font-family: sans-serif;
 	margin:      0;
 	padding:     1rem;
@@ -8,6 +9,9 @@ h1,
 p {
 	font-weight: normal;
 	text-align: center;
+}
+h1 {
+	color: #111111;
 }
 
 a {
