--- a/styles.css
+++ b/styles.css
@@ -6,13 +6,11 @@ body {
 }
 
 h1,
-p,
+h2,
+.js--lifespan--description
 #js--lifespan--inputs {
 	font-weight: normal;
 	text-align: center;
-}
-h1 {
-	color: #111111;
 }
 
 a {
